--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,16 +29,23 @@ body {
     flex-direction: row;
 }
 
-#textContainter {
-
-}
-
 #actionContainer {
     width: 60%;
     border-right: #ffffff solid 1px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#textContainer {
+    width: 40%;
+    border-right: #ffffff solid 1px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    padding: 10px;
+    max-height: 100%;
+    box-sizing: border-box;
 }
 
 #nameInputContainer {
@@ -76,7 +83,17 @@ body {
 
 }
 
+#itemButton {
+
+}
+
 #optionContainer {
     width: 40%;
     background-color: #2c0022;
+}
+
+p {
+    margin: 0;
+    display: flex;
+    font-size: 16px;
 }
