--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 body {
     background-color: #000000;
-    background-image: url('../images/nausicaa.jpg');
+    /*background-image: url('../images/nausicaa.jpg');*/
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -18,7 +18,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #000000;
-    border: solid 1px #24004a;
+    border: solid 1px #ffffff;
     height: 600px;
     width: 1000px;
 }
@@ -29,13 +29,38 @@ body {
     flex-direction: row;
 }
 
+/* action container section */
 #actionContainer {
+    box-sizing: border-box;
     width: 60%;
     border-right: #ffffff solid 1px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 16px;
 }
+
+#itemSelect {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+#itemSelectQuestion {
+    font-size: 30px;
+}
+
+.selectionChoices {
+    display: flex;
+    font-size: 16px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+    padding-left: 20px;
+    margin-top: 20px;
+}
+/* end of action container section */
+
 
 #textContainer {
     width: 40%;
@@ -49,8 +74,11 @@ body {
 }
 
 #nameInputContainer {
+    width: 100%;
+    height: 100%;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 8px;
 }
 
