--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,7 @@ body {
     background-size: cover;
     background-position: center;
     color: #ffffff;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Georgia", Luminari, Times New Roman, serif;
     font-size: 14px;
     display: flex;
     justify-content: center;
@@ -57,6 +57,11 @@ body {
     align-items: flex-start;
     gap: 20px;
     padding-left: 20px;
+    margin-top: 20px;
+}
+
+.itemDescription {
+    font-size: 16px;
     margin-top: 20px;
 }
 /* end of action container section */
@@ -124,4 +129,13 @@ p {
     margin: 0;
     display: flex;
     font-size: 16px;
+}
+
+button {
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+    cursor: pointer;
 }
