--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,6 +64,16 @@ body {
     font-size: 16px;
     margin-top: 20px;
 }
+
+#dialogueSelect {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start; 
+}
+
+#dialogueSelectQuestion {
+    font-size: 30px;
+}
 /* end of action container section */
 
 
@@ -108,10 +118,6 @@ body {
 
 }
 
-#guardButton {
-
-}
-
 #talkButton {
 
 }
@@ -138,4 +144,8 @@ button {
 	padding: 0;
 	font: inherit;
     cursor: pointer;
+}
+
+#pastaDialogue {
+    color: #fff700;
 }
